# collectiv-ai-sdk

./: README.md
sdk-py/: pyproject.toml
sdk-py/collectivai_sdk/: __init__.py  client.py
sdk-ts/: package.json  tsconfig.json
sdk-ts/src/: client.ts
