[project]
name = "collectivai-sdk"
version = "0.1.0"
description = "Official Python SDK for the CollectiVAI Router (prototype)."
authors = [
  { name = "CollectiVAI", email = "info@collectivai.org" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://collectivai.org"
Repository = "https://github.com/collectiv-ai/collectiv-ai-sdk"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
